--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 # Function dependencies, for example:
 # package>=version
 google.cloud.bigquery
-oogle.cloud.bigquery[pandas]
+google.cloud.bigquery[pandas]
